--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -17,7 +17,7 @@
         tools:layout_editor_absoluteY="74dp">
 
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/logo"
             android:layout_width="150dp"
             android:layout_height="150dp"
             android:layout_marginBottom="10dp"
@@ -28,21 +28,19 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginBottom="10dp"
-            android:fontFamily="sans-serif-light"
+            android:fontFamily="sans-serif-black"
             android:gravity="center"
             android:padding="10dp"
-            android:text="SMART MAINTENANCE"
-            android:textSize="60sp"
-
-
-            />
+            android:textColor="@color/CarStation1"
+            android:text="SMART\n MAINTENANCE"
+            android:textSize="50sp" />
 
         <EditText
             android:id="@+id/text_email"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:layout_marginBottom="10dp"
-            android:background="@color/orange"
+            android:background="@color/logineditbox"
             android:drawableStart="@drawable/mail"
             android:gravity="center"
             android:hint="Enter Email"
@@ -54,11 +52,11 @@
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:layout_marginBottom="10dp"
-            android:background="@drawable/edit_text_box"
+            android:background="@color/logineditbox"
             android:drawableStart="@drawable/ic_baseline_create_24"
             android:gravity="center"
             android:hint="Enter Password"
-            android:inputType="numberPassword"
+            android:inputType="textPassword"
             android:padding="20dp" />
 
 
@@ -67,8 +65,7 @@
             android:layout_width="250dp"
             android:layout_height="60dp"
             android:layout_marginBottom="10dp"
-            android:background="@color/orange"
-            android:backgroundTint="@color/orange"
+            android:backgroundTint="@color/CarStation9"
             android:fontFamily="sans-serif-black"
             android:padding="10dp"
             android:text="Login"
@@ -107,6 +104,7 @@
             android:minHeight="48dp"
             android:text="Create an Account"
             android:textSize="20dp"
+            android:textColor="@color/CarStation1"
             android:textStyle="bold" />
 
     </LinearLayout>
