--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,7 @@
         >
 
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/logo1"
             android:layout_width="150dp"
             android:layout_height="150dp"
             android:layout_marginBottom="10dp"
@@ -28,23 +28,22 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-
             android:layout_gravity="center"
             android:layout_marginBottom="10dp"
             android:fontFamily="sans-serif-medium"
+            android:textColor="@color/CarStation1"
             android:gravity="center"
             android:padding="10dp"
-            android:text="SMART MAINTENANCE"
-            android:textSize="60sp" />
+            android:text="SMART \n MAINTENANCE"
+            android:textSize="50sp" />
 
         <Button
             android:id="@+id/btnLogin"
             android:layout_width="250dp"
-            android:layout_height="wrap_content"
+            android:layout_height="60dp"
             android:layout_marginBottom="10dp"
-            android:background="@drawable/btn_view"
-            android:backgroundTint="@color/orange"
-            android:fontFamily="sans-serif-light"
+            android:backgroundTint="@color/CarStation9"
+            android:fontFamily="sans-serif-black"
             android:padding="10dp"
             android:text="Login"
             android:textColor="#FFFFFF"
@@ -54,10 +53,9 @@
         <Button
             android:id="@+id/btnEnter"
             android:layout_width="250dp"
-            android:layout_height="wrap_content"
+            android:layout_height="60dp"
             android:layout_marginBottom="10dp"
-            android:background="@drawable/btn_view"
-            android:backgroundTint="@color/orange"
+            android:backgroundTint="@color/CarStation9"
             android:fontFamily="sans-serif-black"
             android:padding="10dp"
             android:text="Sign Up"
