--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -15,18 +15,21 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             tools:ignore="MissingConstraints"
-            android:layout_gravity="center"
+            android:layout_marginTop="30dp"
             android:gravity="center"
             android:scrollbars="vertical">
 
-            <ImageView
-                android:id="@+id/imageView"
-                android:layout_width="150dp"
-                android:layout_height="150dp"
-                app:tint="#000000"
-                tools:srcCompat="@drawable/ic_baseline_create_24"
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:layout_marginBottom="10dp"
-                />
+                android:fontFamily="sans-serif-black"
+                android:gravity="center"
+                android:padding="10dp"
+                android:textColor="@color/CarStation1"
+                android:text="Welcome!"
+                android:textSize="50sp" />
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -41,7 +44,7 @@
                 android:id="@+id/textName"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
-                android:background="@drawable/edit_text_box"
+                android:background="@color/logineditbox"
                 android:layout_marginBottom="10dp"
                 android:inputType="textPersonName"
                 android:hint="Name"
@@ -53,7 +56,7 @@
                 android:id="@+id/username"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
-                android:background="@drawable/edit_text_box"
+                android:background="@color/logineditbox"
                 android:layout_marginBottom="10dp"
                 android:inputType="textPersonName"
                 android:hint="UserName"
@@ -65,7 +68,7 @@
                 android:id="@+id/textNumber"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
-                android:background="@drawable/edit_text_box"
+                android:background="@color/logineditbox"
                 android:layout_marginBottom="10dp"
                 android:inputType="number"
                 android:hint="Phone Number"
@@ -77,7 +80,7 @@
                 android:id="@+id/textEmail"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
-                android:background="@drawable/edit_text_box"
+                android:background="@color/logineditbox"
                 android:layout_marginBottom="10dp"
                 android:inputType="textEmailAddress"
                 android:hint="Email"
@@ -89,21 +92,28 @@
                 android:id="@+id/textPass"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
-                android:background="@drawable/edit_text_box"
+                android:background="@color/logineditbox"
                 android:layout_marginBottom="10dp"
-                android:inputType="numberPassword"
+                android:inputType="textPassword"
                 android:hint="Password"
                 android:gravity="center"
                 android:paddingLeft="20dp"
                 android:drawableStart="@drawable/ic_baseline_create_24"
                 />
+            <TextView
+                android:id="@+id/Passwrdstrenth"
+                android:fontFamily="sans-serif-black"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+            </TextView>
+
             <Button
                 android:id="@+id/btnSignUpAcc"
                 android:layout_width="250dp"
-                android:layout_height="wrap_content"
+                android:layout_height="60dp"
                 android:layout_marginBottom="10dp"
-                android:background="@drawable/btn_view"
-                android:backgroundTint="@color/orange"
+                android:backgroundTint="@color/CarStation9"
                 android:fontFamily="sans-serif-black"
                 android:padding="10dp"
                 android:text="Sign up"
@@ -140,6 +150,7 @@
                 android:textSize="20dp"
                 android:textStyle="bold"
                 android:contextClickable="true"
+                android:textColor="@color/CarStation1"
                 tools:ignore="TouchTargetSizeCheck" />
 
         </LinearLayout>
