--- a/app/src/main/res/layout/activity_spinner_main.xml
+++ b/app/src/main/res/layout/activity_spinner_main.xml
@@ -4,18 +4,76 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivitySpinner">
+    tools:context=".MainActivitySpinner"
+    android:id="@+id/addCarPage">
 
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--    android:minHeight="48dp"-->
+
+    <EditText
+        android:id="@+id/VID_ET"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:background="@drawable/edit_text_box"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginLeft="18dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginRight="18dp"
+        android:gravity=""
+        android:hint="Enter Vechile ID"
+        android:padding="20dp" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginLeft="18dp"
+        android:layout_marginTop="90dp"
+        android:layout_marginRight="18dp"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <View
+            android:layout_width="100dp"
+            android:layout_height="2dp"
+            android:background="@android:color/black" />
+
+        <TextView
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:gravity="center"
+            android:text="Or"
+            android:textSize="20dp" />
+
+        <View
+            android:layout_width="100dp"
+            android:layout_height="2dp"
+            android:background="@android:color/black" />
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/UseOCr"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginLeft="18dp"
+        android:layout_marginTop="120dp"
+        android:layout_marginRight="18dp"
+        android:clickable="true"
+        android:minHeight="48dp"
+        android:text="USE OCR "
+        android:textSize="20dp"
+        android:textStyle="bold" />
+
     <TextView
         android:id="@+id/text_view_car_company_select"
         android:layout_width="wrap_content"
         android:layout_height="20dp"
         android:layout_alignParentTop="true"
         android:layout_marginLeft="18dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="170dp"
         android:layout_marginRight="18dp"
         android:gravity="center"
         android:text="SELECT YOUR CAR COMPANY "
@@ -29,7 +87,7 @@
         android:dropDownVerticalOffset="44dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="200dp"
         android:layout_marginLeft="18dp"
         android:layout_marginRight="18dp"
         android:background="@drawable/back_ground_spinner"
@@ -42,7 +100,7 @@
         android:layout_height="20dp"
         android:layout_alignParentTop="true"
         android:layout_marginLeft="18dp"
-        android:layout_marginTop="116dp"
+        android:layout_marginTop="260dp"
         android:layout_marginRight="18dp"
         android:gravity="center"
         android:text="Select Your Car Type"
@@ -56,7 +114,7 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginLeft="18dp"
-        android:layout_marginTop="140dp"
+        android:layout_marginTop="290dp"
         android:layout_marginRight="18dp"
         android:background="@drawable/back_ground_spinner_of_type"
         android:dropDownVerticalOffset="44dp"
@@ -68,7 +126,7 @@
         android:layout_height="20dp"
         android:layout_alignParentTop="true"
         android:layout_marginLeft="18dp"
-        android:layout_marginTop="196dp"
+        android:layout_marginTop="350dp"
         android:layout_marginRight="18dp"
         android:gravity="center"
         android:text="SELECT YOUR CAR  "
@@ -82,7 +140,7 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginLeft="18dp"
-        android:layout_marginTop="220dp"
+        android:layout_marginTop="380dp"
         android:layout_marginRight="18dp"
         android:background="@drawable/back_ground_spinner_of_car"
         android:dropDownVerticalOffset="44dp"
@@ -91,18 +149,17 @@
 
     <Button
         android:id="@+id/ButtonSpinnerPage"
-        android:layout_width="wrap_content"
-        android:layout_height="70dp"
+        android:layout_width="150dp"
+        android:layout_height="60dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="160dp"
-        android:layout_marginLeft="18dp"
-        android:layout_marginRight="18dp"
-        android:layout_marginBottom="78dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="125dp"
+        android:layout_marginBottom="75dp"
         android:gravity="center"
-        android:text="SUBMT"
-        android:textColor="@color/black"
-        android:textSize="20sp" />
-
+        android:text="Submit !"
+        android:textAllCaps="false"
+        android:textColor="@android:color/white"
+        android:textSize="18dp"></Button>
 
 </RelativeLayout>
