--- a/app/src/main/res/layout/navigation_header.xml
+++ b/app/src/main/res/layout/navigation_header.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="176dp"
-    android:background="@color/card6"
+    android:background="@color/CarStation5"
     android:gravity="bottom"
     android:orientation="vertical"
     android:padding="15dp"
@@ -11,18 +11,23 @@
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
     <ImageView
-
+        android:id="@+id/userpic"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:layout_marginTop="10dp"
-        android:src="@drawable/ic_person" />
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="30dp"
+        android:layout_marginBottom="20dp"
+        android:src="@drawable/useravater" />
 
     <TextView
         android:id="@+id/UserName"
         android:layout_width="wrap_content"
         android:layout_height="20dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="2dp"
+        android:layout_below="@+id/UserEmail"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="18dp"
+        android:layout_toEndOf="@+id/userpic"
         android:text="Omar"
         android:textColor="@color/black"
         android:textSize="15sp" />
@@ -31,19 +36,13 @@
         android:id="@+id/UserEmail"
         android:layout_width="wrap_content"
         android:layout_height="20dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="5dp"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="60dp"
+        android:layout_toEndOf="@+id/userpic"
         android:text="Meroo950@gmail.com"
         android:textColor="@color/black"
         android:textSize="13sp" />
-    <TextView
-        android:id="@+id/UserId"
-        android:layout_width="wrap_content"
-        android:layout_height="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="5dp"
-        android:text="Num"
-        android:textColor="@color/black"
-        android:textSize="8sp" />
 
-</LinearLayout>
+
+</RelativeLayout>
